// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense summary with 1 expense  1`] = `
<div>
  viewing 
  1
   
  expense
   totalling 
  $145.00
</div>
`;

exports[`should render expense summary with multiple expense  1`] = `
<div>
  viewing 
  10
   
  expenses
   totalling 
  $147,545,556.00
</div>
`;
